Fixed the overflow error

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ body {
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
+    overflow-y: hidden;
 }
 
 a {
